[package]
name = "simpy-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Асинхронный рантайм
tokio = { version = "1.0", features = ["full"] }

# Ядро симуляции
asynchronix = "0.2"

# Lua интеграция
mlua = { version = "0.9", features = ["lua54", "async", "vendored"] }

# Веб-фреймворк (понадобится позже)
axum = "0.7"
tower-http = "0.5"
tera = "1.19"

# Сериализация
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"

# Логирование
tracing = "0.1"
tracing-subscriber = "0.3"

# Утилиты
rand = "0.8"
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.0"

# Временно закомментировали, пока не готовы писать бенчмарки
# [[bench]]
# name = "simulation_bench"
# harness = false
